manifests/admission-policies/management-eu-central-1/validating-admission-policy-binding-require-resource-constraints.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-resource-constraints
spec:
  policyName: require-resource-constraints
  validationActions:
    - Audit
  matchResources: {}
