manifests/admission-policies/management-eu-central-1/validating-admission-policy-require-resource-constraints.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-resource-constraints
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >-
        object.spec.containers.all(c,
          has(c.resources) &&
          has(c.resources.requests) &&
          'cpu' in c.resources.requests
        )
      message: "All containers must have cpu requests defined"
      reason: Invalid
    - expression: >-
        object.spec.containers.all(c,
          !has(c.resources) ||
          !has(c.resources.limits) ||
          !('cpu' in c.resources.limits)
        )
      message: "Containers must not have cpu limits defined"
      reason: Invalid
    - expression: >-
        object.spec.containers.all(c,
          has(c.resources) &&
          has(c.resources.requests) &&
          'memory' in c.resources.requests
        )
      message: "All containers must have memory requests defined"
      reason: Invalid
    - expression: >-
        object.spec.containers.all(c,
          has(c.resources) &&
          has(c.resources.limits) &&
          'memory' in c.resources.limits
        )
      message: "All containers must have memory limits defined"
      reason: Invalid
    - expression: >-
        object.spec.containers.all(c,
          has(c.resources) &&
          has(c.resources.requests) &&
          has(c.resources.limits) &&
          'memory' in c.resources.requests &&
          'memory' in c.resources.limits &&
          c.resources.requests['memory'] == c.resources.limits['memory']
        )
      message: "Memory request must equal memory limit"
      reason: Invalid
